--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # dependencies
 /client/node_modules
 /server/node_modules
+/server/dist
 /client/.pnp
+/client/.env
 .pnp.js
 
 # testing
@@ -42,3 +44,4 @@ yarn-error.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
